<?xml version="1.0"?>
<package format="2">
  <name>skidpad_planner</name>
  <version>1.0.0</version>
  <description>The skidpad_planner package</description>

  <maintainer email="gotlib.adam@gmail.com">Adam Gotlib</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
